--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,19 +1,28 @@
-<div class="flex flex-column flex-1 justify-content-center align-items-center gap-5">
-    <h1><b>Login</b></h1>
-    <div class=" flex flex-1 justify-content-center">
+<div class="h-screen flex flex-column bg-black-alpha-10 justify-content-center align-items-center">
+  <div class="flex flex-column justify-content-center align-items-center gap-4">
+    <div class="flex justify-content-center align-content-center ">
+      <p-image
+          src="https://cdn-icons-png.flaticon.com/512/8639/8639414.png"
+          alt="Image"
+          width="150" />
+  </div>
+    <h1>Ola! Bem-vindo!</h1>
+    <div class="flex flex-1 justify-content-center">
       <p-floatLabel>
-        <input id="username" type="text" pInputText [(ngModel)]="username" />
+        <input class="w-14rem" id="username" type="text" pInputText [(ngModel)]="username" />
         <label for="username">Usuário</label>
       </p-floatLabel>
     </div>
-    <div class="flex align-itens-center">
-      <p-floatLabel>
+    <div class="flex flex-1 align-itens-center">
+      <p-floatLabel >
         <p-password [(ngModel)]="password" [feedback]="false" [toggleMask]="true"/>
         <label for="password">Senha</label>
       </p-floatLabel>
     </div>
-    <div class="flex-column justify-content-center">
-      <p-button label="Login" class="p-2"  (click)="login()"></p-button>
+    <div class="flex flex-1 align-items-center">
+      <p-button label="Login"  (click)="login()"></p-button>
+      <p class="p-4"><b>OR</b></p>
       <p-button label="Register" (click)="register()"></p-button>
     </div>
   </div>
+</div>
