--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,8 @@
-@import "primeng/resources/themes/lara-light-purple/theme.css";
+@import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
+
+body{
+    font-family: 'Roboto', sans-serif;
+    padding: 0;
+    margin: 0;
+}
