Criando componente de Menu para página home

--- a/src/app/componentes/register/register.component.html
+++ b/src/app/componentes/register/register.component.html
@@ -10,7 +10,7 @@
       />
     </div>
     <div class="flex justify-content-center mb-4">
-      <h1>Registro</h1>
+      <h1>Olá seja bem vindo!</h1>
     </div>
     <div class="flex flex-column gap-5">
       <div class="flex flex-1 justify-content-center">
@@ -39,7 +39,7 @@
               pInputText
               [(ngModel)]="email"
             />
-            <label>Usuário</label>
+            <label>E-mail</label>
           </span>
         </div>
       </div>
@@ -65,7 +65,7 @@
       </div>
     </div>
     <div class="flex flex-1 justify-content-center align-items-center">
-      <p-button label="Registrar" (click)="register()"></p-button>
+      <p-button label="Register" (click)="register()"></p-button>
       <p class="p-4"><b>OR</b></p>
       <p-button label="Login" (click)="goToLogin()"></p-button>
     </div>
