--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
+<app-menu
+  *ngIf="
+    rotaAtual !== '/login' && rotaAtual !== '/register' && rotaAtual !== '/'
+  "
+></app-menu>
 <router-outlet></router-outlet>
