--- a/src/app/componentes/produtos/produtos.component.html
+++ b/src/app/componentes/produtos/produtos.component.html
@@ -1,1 +1,11 @@
-<p>produtos works!</p>
+<div class="flex justify-content-center align-items-center p-4">
+  <div class="p-2">
+    <p-button label="Cadastar" />
+  </div>
+  <div class="p-2">
+    <p-button label="Editar" />
+  </div>
+  <div class="p-2">
+    <p-button label="Listar" />
+  </div>
+</div>
