--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -1,3 +1,324 @@
-<div class="w-full">
+<!-- <div class="w-full">
   <p-tabMenu [model]="items" />
+</div> -->
+<div class="card flex p-4">
+  <p-sidebar #sidebarRef [(visible)]="sidebarVisible">
+    <ng-template pTemplate="headless">
+      <div class="flex flex-column h-full">
+        <div
+          class="flex align-items-center justify-content-between px-4 pt-3 flex-shrink-0"
+        >
+          <span class="inline-flex align-items-center gap-2">
+            <span class="font-semibold text-2xl text-primary">BEM VINDO!</span>
+          </span>
+          <span>
+            <p-button
+              type="button"
+              (onClick)="closeCallback($event)"
+              icon="pi pi-times"
+              rounded="true"
+              outlined="true"
+              styleClass="h-2rem w-2rem"
+            ></p-button>
+          </span>
+        </div>
+        <div class="overflow-y-auto">
+          <ul class="list-none p-3 m-0">
+            <li>
+              <div
+                pRipple
+                pStyleClass="@next"
+                enterClass="hidden"
+                enterActiveClass="slidedown"
+                leaveToClass="hidden"
+                leaveActiveClass="slideup"
+                class="p-3 flex align-items-center justify-content-between text-600 cursor-pointer p-ripple"
+              >
+                <span class="font-medium">FAVORITOS</span>
+                <i class="pi pi-chevron-down"></i>
+              </div>
+              <ul class="list-none p-0 m-0 overflow-hidden">
+                <li>
+                  <a
+                    pRipple
+                    pStyleClass="@next"
+                    enterClass="hidden"
+                    enterActiveClass="slidedown"
+                    leaveToClass="hidden"
+                    leaveActiveClass="slideup"
+                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
+                  >
+                    <i class="pi pi-table mr-2"></i>
+                    <span class="font-medium">Produtos</span>
+                    <i class="pi pi-chevron-down ml-auto"></i>
+                  </a>
+                  <ul
+                    class="list-none py-0 pl-3 pr-0 m-0 hidden overflow-y-hidden transition-all transition-duration-400 transition-ease-in-out"
+                  >
+                    <li>
+                      <a
+                        pRipple
+                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
+                      >
+                        <i class="pi pi-save mr-2"></i>
+                        <span class="font-medium">Cadastrar</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        pRipple
+                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
+                      >
+                        <i class="pi pi-sliders-h mr-2"></i>
+                        <span class="font-medium">Editar</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        pRipple
+                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
+                      >
+                        <i class="pi pi-search mr-2"></i>
+                        <span class="font-medium">Listar</span>
+                      </a>
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <a
+                    pRipple
+                    pStyleClass="@next"
+                    enterClass="hidden"
+                    enterActiveClass="slidedown"
+                    leaveToClass="hidden"
+                    leaveActiveClass="slideup"
+                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
+                  >
+                    <i class="pi pi-user mr-2"></i>
+                    <span class="font-medium">Clientes</span>
+                    <i class="pi pi-chevron-down ml-auto"></i>
+                  </a>
+                  <ul
+                    class="list-none py-0 pl-3 pr-0 m-0 hidden overflow-y-hidden transition-all transition-duration-400 transition-ease-in-out"
+                  >
+                    <li>
+                      <a
+                        pRipple
+                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
+                      >
+                        <i class="pi pi-save mr-2"></i>
+                        <span class="font-medium">Cadastrar</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        pRipple
+                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
+                      >
+                        <i class="pi pi-sliders-h mr-2"></i>
+                        <span class="font-medium">Editar</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        pRipple
+                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
+                      >
+                        <i class="pi pi-search mr-2"></i>
+                        <span class="font-medium">Listar</span>
+                      </a>
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <a
+                    pRipple
+                    pStyleClass="@next"
+                    enterClass="hidden"
+                    enterActiveClass="slidedown"
+                    leaveToClass="hidden"
+                    leaveActiveClass="slideup"
+                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
+                  >
+                    <i class="pi pi-users mr-2"></i>
+                    <span class="font-medium">Fornecedores</span>
+                    <i class="pi pi-chevron-down ml-auto"></i>
+                  </a>
+                  <ul
+                    class="list-none py-0 pl-3 pr-0 m-0 hidden overflow-y-hidden transition-all transition-duration-400 transition-ease-in-out"
+                  >
+                    <li>
+                      <a
+                        pRipple
+                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
+                      >
+                        <i class="pi pi-save mr-2"></i>
+                        <span class="font-medium">Cadastrar</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        pRipple
+                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
+                      >
+                        <i class="pi pi-sliders-h mr-2"></i>
+                        <span class="font-medium">Editar</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        pRipple
+                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
+                      >
+                        <i class="pi pi-search mr-2"></i>
+                        <span class="font-medium">Listar</span>
+                      </a>
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <a
+                    pRipple
+                    pStyleClass="@next"
+                    enterClass="hidden"
+                    enterActiveClass="slidedown"
+                    leaveToClass="hidden"
+                    leaveActiveClass="slideup"
+                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
+                  >
+                    <i class="pi pi-truck mr-2"></i>
+                    <span class="font-medium">Pedidos</span>
+                    <i class="pi pi-chevron-down ml-auto"></i>
+                  </a>
+                  <ul
+                    class="list-none py-0 pl-3 pr-0 m-0 hidden overflow-y-hidden transition-all transition-duration-400 transition-ease-in-out"
+                  >
+                    <li>
+                      <a
+                        pRipple
+                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
+                      >
+                        <i class="pi pi-save mr-2"></i>
+                        <span class="font-medium">Cadastrar</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        pRipple
+                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
+                      >
+                        <i class="pi pi-sliders-h mr-2"></i>
+                        <span class="font-medium">Editar</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        pRipple
+                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
+                      >
+                        <i class="pi pi-search mr-2"></i>
+                        <span class="font-medium">Listar</span>
+                      </a>
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <a
+                    pRipple
+                    pStyleClass="@next"
+                    enterClass="hidden"
+                    enterActiveClass="slidedown"
+                    leaveToClass="hidden"
+                    leaveActiveClass="slideup"
+                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
+                  >
+                    <i class="pi pi-credit-card mr-2"></i>
+                    <span class="font-medium">Transações</span>
+                    <i class="pi pi-chevron-down ml-auto"></i>
+                  </a>
+                  <ul
+                    class="list-none py-0 pl-3 pr-0 m-0 hidden overflow-y-hidden transition-all transition-duration-400 transition-ease-in-out"
+                  >
+                    <li>
+                      <a
+                        pRipple
+                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
+                      >
+                        <i class="pi pi-save mr-2"></i>
+                        <span class="font-medium">Cadastrar</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        pRipple
+                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
+                      >
+                        <i class="pi pi-sliders-h mr-2"></i>
+                        <span class="font-medium">Editar</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        pRipple
+                        class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
+                      >
+                        <i class="pi pi-search mr-2"></i>
+                        <span class="font-medium">Listar</span>
+                      </a>
+                    </li>
+                  </ul>
+                </li>
+                <li>
+
+              </ul>
+            </li>
+          </ul>
+          <ul class="list-none p-3 m-0">
+            <li>
+              <div
+                pRipple
+                pStyleClass="@next"
+                enterClass="hidden"
+                enterActiveClass="slidedown"
+                leaveToClass="hidden"
+                leaveActiveClass="slideup"
+                class="p-3 flex align-items-center justify-content-between text-600 cursor-pointer p-ripple"
+              >
+                <span class="font-medium">APLICAÇÃO</span>
+                <i class="pi pi-chevron-down"></i>
+              </div>
+              <ul class="list-none p-0 m-0 overflow-hidden">
+                <li>
+                  <a
+                    pRipple
+                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
+                  >
+                    <i class="pi pi-cog mr-2"></i>
+                    <span class="font-medium">Configurações</span>
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <div class="mt-auto">
+          <hr class="mb-3 mx-3 border-top-1 border-none surface-border" />
+          <a
+            pRipple
+            class="m-3 flex align-items-center cursor-pointer p-3 gap-2 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
+          >
+            <p-avatar
+              image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png"
+              shape="circle"
+            />
+            <span class="font-bold">Usuário Logado</span>
+          </a>
+        </div>
+      </div>
+    </ng-template>
+  </p-sidebar>
+  <p-button
+    (onClick)="sidebarVisible = true"
+    icon="pi pi-arrow-right"
+  ></p-button>
 </div>
