:bricks: ci: Modificação nos componentes

--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -9,7 +9,7 @@
           class="flex align-items-center justify-content-between px-4 pt-3 flex-shrink-0"
         >
           <span class="inline-flex align-items-center gap-2">
-            <span class="font-semibold text-2xl text-primary">BEM VINDO!</span>
+            <span class="font-semibold text-2xl text-primary" routerLink="/home">BEM VINDO!</span>
           </span>
           <span>
             <p-button
@@ -268,8 +268,7 @@
                     </li>
                   </ul>
                 </li>
-                <li>
-
+                <li></li>
               </ul>
             </li>
           </ul>
