--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -59,6 +59,7 @@
                       <a
                         pRipple
                         class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
+                        routerLink="/criarProduto"
                       >
                         <i class="pi pi-save mr-2"></i>
                         <span class="font-medium">Cadastrar</span>
