--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -1,7 +1,7 @@
 <!-- <div class="w-full">
   <p-tabMenu [model]="items" />
 </div> -->
-<div class="card flex p-4">
+<div class="card flex p-4  bg-black-alpha-20">
   <p-sidebar #sidebarRef [(visible)]="sidebarVisible">
     <ng-template pTemplate="headless">
       <div class="flex flex-column h-full">
